--- a/Seda-Khane/styles/style.css
+++ b/Seda-Khane/styles/style.css
@@ -87,13 +87,16 @@
 
 .sidebar {
   position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   top: 0;
   right: 0;
   height: 100vh;
   background-color: #2f3240;
   z-index: 1000;
   padding: 16px;
-  box-sizing: border-box;
 }
 .sidebar .userAvatar {
   border-radius: 8px;
@@ -103,7 +106,7 @@
 .sidebar .devider {
   display: block;
   width: 100%;
-  height: 2px;
+  height: 3px;
   border-radius: 2px;
   opacity: 0.5;
   background-color: #7f8c8d;
@@ -113,14 +116,15 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  width: 100%;
 }
 .sidebar ul li {
-  margin-bottom: 10px;
+  margin-bottom: 12px;
+  text-align: center;
 }
-.sidebar ul li a {
-  color: white;
-  text-decoration: none;
-  font-size: 1.1rem;
+.sidebar ul li img.subs {
+  border-radius: 8px;
+  margin-bottom: 16px;
 }
 
 * {
